AM_CPPFLAGS = @GTK2_CFLAGS@ @LIBUNIQUE_CFLAGS@
LIBS = @GTK2_LIBS@ @LIBUNIQUE_LIBS@

bin_PROGRAMS = gsimplecal
gsimplecal_SOURCES = \
	Boxable.cpp \
	Boxable.hpp \
	Calendar.cpp \
	Calendar.hpp \
	Clock.cpp \
	Clock.hpp \
	Config.cpp \
	Config.hpp \
	gsimplecal.cpp \
	MainWindow.cpp \
	MainWindow.hpp \
	Timezones.cpp \
	Timezones.hpp

