AM_CPPFLAGS = @GTK_CFLAGS@
LIBS = @GTK_LIBS@

bin_PROGRAMS = gsimplecal
gsimplecal_SOURCES = \
	Boxable.cpp \
	Boxable.hpp \
	Calendar.cpp \
	Calendar.hpp \
	Clock.cpp \
	Clock.hpp \
	Config.cpp \
	Config.hpp \
	gsimplecal.cpp \
	MainWindow.cpp \
	MainWindow.hpp \
	Timezones.cpp \
	Timezones.hpp \
	Unique.cpp \
	Unique.hpp
